@@ -12,6 +12,7 @@
 - fixed `copypath` functionality in the `PROXY()` method
 - added auto clearing cache for the `CONVERT()` method
 - extended `CORS()` method by returning instance of the route (that can be dynamically removed)
+- extended `FlowStream` connections by adding the `color` attribute
 
 ========================
 0.0.60
